--- a/app/web/views/popupContact.html
+++ b/app/web/views/popupContact.html
@@ -6,19 +6,24 @@
 </div>
 
 <!-- ==================== BODY ==================== -->
-<div class="modal-body">
+<div class=\"modal-body\">
   <form>
-    <div class="form-group">
+    <label for=\"message-text\" class=\"control-label\">
+      Your email:
+    </label>
 
-      <div class="input-group">
-        <label for="message-text" class="control-label">Your email:</label>
-        <span class="input-group-addon">@</span>
-        <input type="email" class="form-control" id="contactEmail">
-      </div><br>
+    <div class=\"form-group\">
 
-      <div class="form-group">
-        <label for="message-text" class="control-label">Message:</label>
-        <textarea class="form-control" id="message-text" id="contactMessage"></textarea>
+      <div class=\"input-group\">
+        <span class=\"input-group-addon\">@</span>
+        <input type=\"email\" class=\"form-control\" id=\"contactEmail\">
+      </div> <br />
+      
+      <div class=\"form-group\">
+        <label for=\"message-text\" class=\"control-label\">
+          Message:
+        </label>
+        <textarea class=\"form-control\" id=\"message-text\" id=\"contactMessage\"></textarea>
       </div>
 
     </div>
