Stable: popup: Read from html content

--- a/app/web/views/popupContact.html
+++ b/app/web/views/popupContact.html
@@ -6,24 +6,24 @@
 </div>
 
 <!-- ==================== BODY ==================== -->
-<div class=\"modal-body\">
+<div class="modal-body">
   <form>
-    <label for=\"message-text\" class=\"control-label\">
+    <label for="message-text" class="control-label">
       Your email:
     </label>
 
-    <div class=\"form-group\">
+    <div class="form-group">
 
-      <div class=\"input-group\">
-        <span class=\"input-group-addon\">@</span>
-        <input type=\"email\" class=\"form-control\" id=\"contactEmail\">
+      <div class="input-group">
+        <span class="input-group-addon">@</span>
+        <input type="email" class="form-control" id="contactEmail">
       </div> <br />
       
-      <div class=\"form-group\">
-        <label for=\"message-text\" class=\"control-label\">
+      <div class="form-group">
+        <label for="message-text" class="control-label">
           Message:
         </label>
-        <textarea class=\"form-control\" id=\"message-text\" id=\"contactMessage\"></textarea>
+        <textarea class="form-control" id="message-text" id="contactMessage"></textarea>
       </div>
 
     </div>
