--- a/app/web/views/popupInformations.html
+++ b/app/web/views/popupInformations.html
@@ -10,7 +10,7 @@
   <div class="media">
     <div class="media-left">
       <a href="#">
-        <img class="media-object" src="./img/fanda.png" alt="Fanda">
+        <img class="media-object" src="./img/icon-avatar/fanda.png" alt="Fanda">
       </a>
     </div>
     <div class="media-body">
@@ -22,7 +22,7 @@
   <div class="media">
     <div class="media-left">
       <a href="#">
-        <img class="media-object" src="./img/pev.png" alt="Pev">
+        <img class="media-object" src="./img/icon-avatar/pev.png" alt="Pev">
       </a>
     </div>
     <div class="media-body">
@@ -34,7 +34,7 @@
   <div class="media">
     <div class="media-left">
       <a href="#">
-        <img class="media-object" src="./img/github.png" alt="Fanda">
+        <img class="media-object" src="./img/icon-avatar/github.png" alt="Fanda">
       </a>
     </div>
     <div class="media-body">
