--- a/app/web/views/popupFocus.html
+++ b/app/web/views/popupFocus.html
@@ -15,7 +15,7 @@
   <form>
     <div class="form-group">
       <div id="optionsFocusInterests"></div><br>
-      <input type="text" class="form-control" id="textKeyword">
+      <input type="text" class="form-control" id="textKeyword" placeholder="Helsinki">
     </div>
   </form>
 
