--- a/app/web/views/popupFocus.html
+++ b/app/web/views/popupFocus.html
@@ -15,7 +15,7 @@
   <form>
     <div class="form-group">
       <div id="optionsFocusInterests"></div><br>
-      <input type="text" class="form-control" id="textKeyword" placeholder="Helsinki">
+      <input type="text" class="form-control" id="textFocusKeyword" value="Helsinki">
     </div>
   </form>
 
@@ -28,12 +28,12 @@
 
     <div class="form-group">
       <label class="sr-only" for="focusLatLong-Lat">Latitude</label>
-      <input type="text" class="form-control" id="textFocusLatLong-Lat" placeholder="Lat" value="60.172897">
+      <input type="text" class="form-control" id="textFocusLat" placeholder="Lat" value="60.172897">
     </div>
 
     <div class="form-group">
       <label class="sr-only" for="focusLatLong-Long">Longitude</label>
-      <input type="text" class="form-control" id="textFocusLatLong-Long" placeholder="Long" value="24.941583">
+      <input type="text" class="form-control" id="textFocusLong" placeholder="Long" value="24.941583">
     </div>
 
   </form>
