--- a/app/web/views/pageTimeTables.html
+++ b/app/web/views/pageTimeTables.html
@@ -13,26 +13,26 @@
 
   <!-- ==================================================================== -->
   <link rel="stylesheet" 
-    href="./lib/bootstrap/3.3.5-dist/css/bootstrap.min.css" />
+    href="../lib/bootstrap/3.3.5-dist/css/bootstrap.min.css" />
   <link rel="stylesheet" 
-    href="./lib/bootstrap/ext-select/dist/css/bootstrap-select.min.css" />
+    href="../lib/bootstrap/ext-select/dist/css/bootstrap-select.min.css" />
   <link rel="stylesheet" 
-    href="./lib/leaflet/1.0.0-b1/leaflet.css" />
+    href="../lib/leaflet/1.0.0-b1/leaflet.css" />
   <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.ie.css" />
   <![endif]-->
   <link rel="stylesheet" 
-    href="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
+    href="../lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
   <link rel="stylesheet" 
-    href="./lib/leaflet/ext-easybutton/src/easy-button.css">
+    href="../lib/leaflet/ext-easybutton/src/easy-button.css">
   <link rel="stylesheet" 
-    href="./css/main.css" />
+    href="../css/main.css" />
 
   <!-- ==================================================================== -->
-  <script src="./lib/jquery/2.1.4/jquery.min.js"></script>
-  <script src="./lib/bootstrap/3.3.5-dist/js/bootstrap.min.js"></script>
+  <script src="../lib/jquery/2.1.4/jquery.min.js"></script>
+  <script src="../lib/bootstrap/3.3.5-dist/js/bootstrap.min.js"></script>
   <script 
-    src="./lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
+    src="../lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
 
   <!-- ==================================================================== -->
   <script src="./js/actionGetTrains.js"></script>
