timetables: Load train.js

--- a/app/web/views/pageTimetables.html
+++ b/app/web/views/pageTimetables.html
@@ -35,7 +35,7 @@
     src="../lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
 
   <!-- ==================================================================== -->
-  <script src="./js/actionGetTrains.js"></script>
+  <script src="../js/actionGetTrains.js"></script>
 
 </head>
 <body>
