--- a/app/web/views/pageStations.html
+++ b/app/web/views/pageStations.html
@@ -35,7 +35,7 @@
     src="../lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
 
   <!-- ==================================================================== -->
-  <script src="../js/pageTimetables.js"></script>
+  <script src="../js/pageStations.js"></script>
 
 </head>
 <body>
@@ -46,8 +46,8 @@
       <nav>
         <ul class="nav nav-pills pull-right">
           <li role="presentation"><a href="../">Map</a></li>
-          <li><a href="./pageStations.html">Stations</a></li>
-          <li role="presentation" class="active"><a href="./pageTimetables.html">Timetables</a></li>
+          <li role="presentation" class="active"><a href="./pageStations.html">Stations</a></li>
+          <li><a href="./pageTimetables.html">Timetables</a></li>
           
         </ul>
       </nav>
@@ -56,23 +56,9 @@
 
     <div class="row marketing">
 
-      <h1>Timetables</h1><br>
+      <h1>Stations</h1><br>
 
-      <form id="trainForm">
-        <div class="form-group">
-          <label for="trainValue">Live from:</label>
-          <input type="text" class="form-control" id="trainValue" value="HL">
-        </div>
-        <button type="button" class="btn btn-default" id="trainButton">Submit</button>
-      </form>
-
-    </div>
-
-    <div class="row marketing">
-
-      <h3>Results</h3><br>
-
-      <div id="divResults"></div>
+      <div id="divStations"></div>
 
     </div>
 
