--- a/app/web/views/pageTimetables.html
+++ b/app/web/views/pageTimetables.html
@@ -57,7 +57,7 @@
         <div class="form-group">
           <div class="ui-widget">
             <label for="trainValue">Station:</label>
-            <input type="text" class="form-control" id="textStation" placeholder="HL">
+            <input type="text" class="form-control" id="textStation" placeholder="HKL: Helsinki">
           </div>
         </div>
         <button type="button" class="btn btn-default" id="trainButton">Submit</button>
