--- a/app/web/views/pageTimetables.html
+++ b/app/web/views/pageTimetables.html
@@ -56,8 +56,8 @@
       <form id="trainForm">
         <div class="form-group">
           <div class="ui-widget">
-            <label for="trainValue">Station:</label>
-            <input type="text" class="form-control" id="textStation" placeholder="HKL: Helsinki">
+            <label for="textStation">Station:</label>
+            <input type="text" class="form-control" id="textStation" placeholder="HKI: Helsinki">
           </div>
         </div>
         <button type="button" class="btn btn-default" id="trainButton">Submit</button>
