--- a/app/web/views/pageTimetables.html
+++ b/app/web/views/pageTimetables.html
@@ -40,7 +40,7 @@
     <div class="header clearfix">
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation"><a href="../">Map</a></li>
+          <li role="presentation"><a href="../index.html">Map</a></li>
           <li><a href="./pageStations.html">Stations</a></li>
           <li role="presentation" class="active"><a href="./pageTimetables.html">Timetables</a></li>
           
@@ -78,6 +78,8 @@
     </footer>
 
   </div> <!-- /container -->
+
+
 
 </body>
 </html>
