--- a/app/web/views/pageStations.html
+++ b/app/web/views/pageStations.html
@@ -36,7 +36,7 @@
     <div class="header clearfix">
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation"><a href="../">Map</a></li>
+          <li role="presentation"><a href="../index.html">Map</a></li>
           <li role="presentation" class="active"><a href="./pageStations.html">Stations</a></li>
           <li><a href="./pageTimetables.html">Timetables</a></li>
           
