--- a/app/web/views/popupContact.html
+++ b/app/web/views/popupContact.html
@@ -15,15 +15,20 @@
     <div class="form-group">
 
       <div class="input-group">
-        <span class="input-group-addon">@</span>
-        <input type="email" class="form-control" id="contactEmail">
+        <span class="input-group-addon">From</span>
+        <input type="email" class="form-control" placeholder="Your email..." id="contactEmail">
+      </div> <br />
+
+      <div class="input-group">
+        <span class="input-group-addon">Subject</span>
+        <input type="text" class="form-control" placeholder="Your subject..." id="contactSubject">
       </div> <br />
       
       <div class="form-group">
         <label for="message-text" class="control-label">
           Message:
         </label>
-        <textarea class="form-control" id="message-text" id="contactMessage"></textarea>
+        <textarea class="form-control" id="message-text" placeholder= "Your message" id="contactMessage"></textarea>
       </div>
 
     </div>
