--- a/app/web/views/popupContact.html
+++ b/app/web/views/popupContact.html
@@ -40,7 +40,8 @@
   <button type="button" class="btn btn-default" data-dismiss="modal">
     Close
   </button>
-  <button type="button" class="btn btn-primary disabled">
+  <button type="button" class="btn btn-primary" 
+    onclick="buttonMail();">
     Send message
   </button>
 </div>
