--- a/app/web/views/popupContact.html
+++ b/app/web/views/popupContact.html
@@ -41,7 +41,7 @@
     Close
   </button>
   <button type="button" class="btn btn-primary" 
-    onclick="buttonContact();">
+    onclick="popup_buttonContact();">
     Send message
   </button>
 </div>
