--- a/web/views/pageStats.html
+++ b/web/views/pageStats.html
@@ -49,7 +49,7 @@
 
       <h1>Stations</h1><br>
 
-      <div id="divStats"></div>
+      <div id="chartdiv" style="width: 500px; height: 600px;"></div>
 
     </div>
 
