--- a/web/views/pageStats.html
+++ b/web/views/pageStats.html
@@ -24,6 +24,8 @@
   <script src="../lib/bootstrap/3.3.5-dist/js/bootstrap.min.js"></script>
   <script 
     src="../lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
+  <script 
+    src="../lib/amcharts/3.17.3/amcharts.js"></script>
 
   <!-- ==================================================================== -->
   <script src="../js/pageStats.js"></script>
