--- a/web/views/pageStats.html
+++ b/web/views/pageStats.html
@@ -25,7 +25,7 @@
   <script 
     src="../lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
   <script 
-    src="../lib/amcharts/3.17.3/amcharts.js"></script>
+    src="../lib/amcharts/3.17.3/amcharts/amcharts.js"></script>
 
   <!-- ==================================================================== -->
   <script src="../js/pageStats.js"></script>
