Prepare the list charts

--- a/web/views/pageStats.html
+++ b/web/views/pageStats.html
@@ -53,6 +53,7 @@
 
       <h1>Stations</h1><br>
 
+      <div id="listCharts"></div>
       <div id="chartdiv" style="width: 500px; height: 600px;"></div>
 
     </div>
